Update styles of the GA4 Activation Banner to align the benefits block correctly.

--- a/assets/sass/components/analytics-4/_googlesitekit-analytics-4-reminder-banner.scss
+++ b/assets/sass/components/analytics-4/_googlesitekit-analytics-4-reminder-banner.scss
@@ -49,6 +49,7 @@
 		}
 
 		.googlesitekit-publisher-win__secondary-pane {
+			margin: 0;
 
 			.googlesitekit-publisher-win__secondary-pane-title {
 				font-family: $f-primary;
